# bibigrid

./: .ansible-lint  .gitignore  .hgignore  .pylintrc  ChangeLog.md  Dockerfile-rest  LICENSE  README.md  bibigrid  bibigrid.properties.os  bibigrid.sh  bibigrid.yaml  bibigrid.yml  bibigrid_rest.sh  build.xml  dependency-reduced-pom.xml  ivy.xml  pom.xml  pyproject.toml  rebuild-lock-and-reqs.sh  requirements-all.txt  requirements-dev.txt  requirements-full.txt  requirements-rest.txt  requirements.txt  sample_rest_using.py  skel.bibigrid.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linting.yml  publish_docker.yml  publish_docker_dev.yml  publish_docker_release.yml
bibigrid-aws/: pom.xml
bibigrid-aws/docs/: Credentials_Setup.md
bibigrid-azure/: pom.xml
bibigrid-azure/docs/: Credentials_Setup.md
bibigrid-core/: pom.xml
bibigrid-googlecloud/: pom.xml
bibigrid-googlecloud/docs/: Credentials_Setup.md
bibigrid-gui/: README.md  pom.xml
bibigrid-light-rest-4j/: .env.in  .gitignore  Bibigrid-API-Example-Requests-Postman.json  DEVELOPMENTGUIDE.md  DEVGUIDE.md  Dockerfile  Makefile  PostmanExampleRequests.json  README.md  config.json  docker-compose.dev.yml  docker-compose.yml  documentation.html  generate-api-from-json.sh  kubernetes.yml  openapi.json  pom.xml  postman-example-requests.json  prepareDockerBuild.sh
bibigrid-light-rest-4j/application/: build.sh  (+1 more)
bibigrid-main/: pom.xml
bibigrid-openstack/: pom.xml
docs/: COMMAND_LINE.md  CONFIGURATION_SCHEMA.md  NETWORK.md  README.md
documentation/: used_by.md
misc/: README  bibigrid  skel.bibigrid.properties
nbproject/: build-impl.xml  build-impl.xml~  genfiles.properties  project.properties  project.xml
playbooks/: playbookinstall.sh
resources/: cloud_node_requirements.yaml
scripts/: cleanUpProject  stresstest  viewlog
src/: logback.xml
template/: .bibigrid.properties  .bibigrid.yml
tests/: startupTests.py  startup_tests.py  test_ValidateConfiguration.py  test_ansibleConfigurator.py  test_ansible_configurator.py  test_check.py  test_configurationHandler.py  test_configuration_handler.py  test_create.py  test_idGeneration.py  test_id_generation.py  test_listClusters.py  test_list_clusters.py  test_providerHandler.py  test_returnThreading.py  test_sshHandler.py  test_ssh_handler.py  test_startup.py  test_terminateCluster.py  test_validate_configuration.py  test_validate_schema.py
(+807 files in other folders)
