[project]
name = "bibigrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pysocks",
    "ipdb",
    "click",
    "openstacksdk==0.62",
    "mergedeep~=1.3.4",
    "paramiko~=3.5.0",
    "python-cinderclient",
    "python-keystoneclient",
    "python-novaclient",
    "python-openstackclient==6.0.0",
    "PyYAML~=6.0",
    "shortuuid~=1.0.13",
    "sshtunnel~=0.4.0",
    "sympy~=1.12",
    "seedir~=0.5.0",
    "cryptography~=44.0.2",
    "pydantic~=2.11.3",
    "keystoneauth1~=5.1.0",
    "filelock~=3.16.1",
    "schema~=0.7.7",
    "Werkzeug==3.1.3"
]

[project.optional-dependencies]
rest = [
    "fastapi~=0.115.12",
    "uvicorn~=0.34.1"
]
dev = [
    "ansible_lint==24.9.0",
    "pylint==3.3",
    "httpx==0.28.1"
]

[tool.uv]
environments = ["platform_system != 'Windows'"]

[project.scripts]
bibigrid = "bibigrid.core.startup:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bibigrid*", "resources"]
exclude = ["tests*"]

