[project]
name = "bibigrid"
version = "3.1.0"
description = "BiBiGrid is a cloud cluster creation and management tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pysocks",
    "ipdb",
    "click~=8.3.0",
    "openstacksdk==0.62",
    "mergedeep~=1.3.4",
    "paramiko<4.0.0",
    "python-cinderclient",
    "python-keystoneclient",
    "python-novaclient",
    "python-openstackclient==6.0.0",
    "PyYAML~=6.0",
    "shortuuid~=1.0.13",
    "sshtunnel~=0.4.0",
    "sympy~=1.12",
    "seedir~=0.5.0",
    "cryptography~=46.0.1",
    "pydantic~=2.11.9",
    "keystoneauth1~=5.1.0",
    "filelock~=3.19.1",
    "schema~=0.7.7",
    "Werkzeug==3.1.3"
]

[project.optional-dependencies]
rest = [
    "fastapi~=0.117.1",
    "uvicorn~=0.36.0"
]
dev = [
    "ansible>=12.0.0",
    "ansible_lint==25.9.0",
    "pylint==3.3.8",
    "httpx==0.28.1"
]

[tool.uv]
environments = ["platform_system != 'Windows'"]

[project.scripts]
bibigrid = "bibigrid.core.startup:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bibigrid*",]
exclude = ["tests*"]

[tool.setuptools.package-data]
"bibigrid.resources" = ["**/*"]
